--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
                     <h1>Weather Web</h1>
             </div>
             <ul class="nav navbar-nav">
+                <div class="container mt-5">
+                    <form class="input-group">
+                      <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-secondary" type="submit">
+                        <i class="bi bi-search"></i>
+                      </button>
+                    </form>
+                  </div>
                 
             </ul>
         </nav>
@@ -25,27 +33,21 @@
                 <div class="col-sm-7">
                  <h3>Mon</h3>
             </div>
-            <div class="row">
                 <div class="col-sm-7">
                  <h3>Tue</h3>
             </div>
-            <div class="row">
                 <div class="col-sm-7">
                  <h3>Wed</h3>
             </div>
-            <div class="row">
                 <div class="col-sm-7">
                  <h3>Thu</h3>
             </div>
-            <div class="row">
                 <div class="col-sm-7">
                  <h3>Fri</h3>
             </div>
-            <div class="row">
                 <div class="col-sm-7">
                  <h3>Sat</h3>
             </div>
-            <div class="row">
                 <div class="col-sm-7">
                  <h3>Sun</h3>
             </div>
