fixing html for navigation bar

--- a/index.html
+++ b/index.html
@@ -9,25 +9,27 @@
 
  <body>
     <main> 
+        <!-- Start Navigator Bar -->
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <h1>Weather Web</h1>
             </div>
+
             <ul class="nav navbar-nav">
                 <div class="container mt-5">
-                    <form class="input-group">
-                      <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn btn-outline-secondary" type="submit">
-                        <i class="bi bi-search"></i>
-                      </button>
-                    </form>
-                  </div>
-                
+                     <form class="input-group">
+                         <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                         <i class="bi bi-search"></i>
+                         </button>
+                     </form>
+                </div>
             </ul>
         </nav>
-        
+        <!-- End Navigation Bar -->
 
+
+        <!-- Start Days Table-->
         <div class="container">
             <div class="row">
                 <div class="col-sm-7">
