--- a/index.html
+++ b/index.html
@@ -3,81 +3,57 @@
  <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
     <title>Weather Web</title>
  </head>
 
  <body>
     <main> 
         <!-- Start Navigator Bar -->
-        <nav class="navbar navbar-default">
+        <nav class="navbar">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <h1>Weather Web</h1>
             </div>
-
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav navbar-right">
                 <div class="container mt-5">
                      <form class="input-group">
-                         <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                         <i class="bi bi-search"></i>
-                         </button>
+                                <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                                <button class="btn btn-outline-secondary" type="submit">Submit</button>
+                                <i class="bi bi-search"></i>
                      </form>
                 </div>
             </ul>
         </nav>
         <!-- End Navigation Bar -->
 
+        <!-- Start Middle Section -->
+        <div class="container text-center">
+            <div class="row">
+              <div class="col">
+                <img src="location.png">
+                <h2>Jakarta</h2>
+              </div>
+              <div class="col">
+                Column
+              </div>
+              <div class="col">
+                Column
+              </div>
+            </div>
+          </div>
+
+
+        <!-- End Middle Section -->
 
         <!-- Start Days Table-->
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-7">
-                 <h3>Mon</h3>
-            </div>
-                <div class="col-sm-7">
-                 <h3>Tue</h3>
-            </div>
-                <div class="col-sm-7">
-                 <h3>Wed</h3>
-            </div>
-                <div class="col-sm-7">
-                 <h3>Thu</h3>
-            </div>
-                <div class="col-sm-7">
-                 <h3>Fri</h3>
-            </div>
-                <div class="col-sm-7">
-                 <h3>Sat</h3>
-            </div>
-                <div class="col-sm-7">
-                 <h3>Sun</h3>
-            </div>
-
+        
+        <!-- End Days Table -->
         </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </main>
  </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
