--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
  </head>
 
  <body>
-    <main>
+        <!-- Start Background Cover -->
+        <div class="container text-center">
+            <div class="background-div">
+            </div>
+        </div>
+        <!-- End Background Cover -->
         <!-- Start Navigation Bar -->
         <nav class="navbar navbar-light">
             <div class="container-fluid">
-              <span class="navbar-brand text-white">Weather Web</span>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search city" aria-label="Search">
+              <a class="navbar-brand" href="#">
+                <img src="illustration.png" alt="Logo" class="d-inline-block align-text-top" style="width: 60px;">
+              </a>
+              <span class="navbar-brand">Weather Web</span>
+                <form class="d-flex" role="search" >
+                    <input class="form-control me-2" type="search" placeholder="Search city" aria-label="Search" id="search-box">
                     <button class="btn btn-outline-light" type="submit"><i class="fa-solid fa-magnifying-glass-location"></i></button>
                 </form>
             </div>
@@ -28,21 +36,26 @@
         <div class="container text-center">
             <div class="row">
               <div class="col">
-                    <i class="fa-solid fa-location-dot fa-2xl"></i>
-                    <!-- <img src="location.png"  class="rounded float-start" alt="location"> -->
-                    <span id="city" class="fs-1 fw-bold text-white">Jakarta</span>
+                    <!-- <i class="fa-solid fa-location-dot fa-2xl"></i> -->
+                    <img src="https://img.icons8.com/?size=100&id=3723&format=png&color=000000" width="50px">
+                    <span id="city" class="fs-1 fw-bold text-black"></span>
+                    <br>
+                    <br>
+                    <span id="day" class="fs-1 fw-bold text-black"></span>
               </div>
               <div class="col">
-                    <span id="weathericon">
-                        <i class="fa-solid fa-cloud fa-10x"></i>
-                    </span><!-- <img src="windy.png" class="position-absolute top-50 start-50 translate-middle" alt="windy"> -->
+                    <span id="imageweather" width="100px"></span>
               </div>
               <div class="col">
                 <div class="row">
-                    <span id="weathertemperature" class="fs-1 fw-bold text-white">29°C</span>
-                </div>    
+                    <span id="temperature" class="fs-1 fw-bold text-black"></span>
+                </div>
                 <div class="row">
-                    <span id="weatherstatus" class="fs-3 fw-semibold text-white">Windy</span>
+                    <span id="humidity" class="fs-1 fw-semibold text-black"></span>
+                </div>   
+                <div class="row">
+                    <span id="min temperature" class="fs-3 fw-semibold text-primary"></span>
+                    <span id="max temperature" class="fs-3 fw-semibold text-primary"></span>
                 </div>
               </div>
             </div>
@@ -50,27 +63,28 @@
         <!-- End Middle Section -->
 
         <!-- Start Card-->
-        <div class="container text-center">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="container md-align-items-center text-center ">
             <div class="row">
                 <div class="col">
                     <div class="card">
                         <div class="card-body body-custom">
-                          <h5 class="card-title text-white">Mon</h5>
+                          <h5 class="card-title text-white" id="day-1"></h5>
                           <p class="card-text">
                             <div class="row">
-                                <div class="col">
-                                    <!-- icon -->
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <!-- weather status -->
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <!-- min max temperature -->
-                                </div>
+                                <ul class="list-unstyled mt-3 mb-4">
+                                    <li id="temperature.next1" ></li>
+                                    <li id="humidity_next1"></li>
+                                    <br>
+                                    <li id="min-temp.next1"></li>
+                                    <li id="max-temp.next1"></li>
                             </div>
                           </p>
                         </div>
@@ -79,22 +93,16 @@
                 <div class="col">
                     <div class="card">
                         <div class="card-body body-custom">
-                          <h5 class="card-title text-white">Tue</h5>
+                          <h5 class="card-title text-white" id="day-2"></h5>
                           <p class="card-text">
                             <div class="row">
-                                <div class="col">
-                                    <!-- icon -->
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <!-- weather status -->
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <!-- min max temperature -->
-                                </div>
+                                <ul class="list-unstyled mt-3 mb-4">
+                                    <li id="temperature.next2" ></li>
+                                    <li id="humidity_next2"></li>
+                                    <br>
+                                    <li id="min-temp.next2"></li>
+                                    <li id="max-temp.next2"></li>
+                                </ul>
                             </div>
                           </p>
                         </div>
@@ -103,22 +111,16 @@
                 <div class="col">
                     <div class="card">
                         <div class="card-body body-custom">
-                          <h5 class="card-title text-white">Wed</h5>
+                          <h5 class="card-title text-white" id="day-3"></h5>
                           <p class="card-text">
                             <div class="row">
-                                <div class="col">
-                                    <!-- icon -->
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <!-- weather status -->
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <!-- min max temperature -->
-                                </div>
+                                <ul class="list-unstyled mt-3 mb-4">
+                                    <li id="temperature.next3" ></li>
+                                    <li id="humidity_next3"></li>
+                                    <br>
+                                    <li id="min-temp.next3"></li>
+                                    <li id="max-temp.next3"></li>
+                                </ul>
                             </div>
                           </p>
                         </div>
@@ -127,22 +129,16 @@
                 <div class="col">
                     <div class="card">
                         <div class="card-body body-custom">
-                          <h5 class="card-title text-white">Thu</h5>
+                          <h5 class="card-title text-white" id="day-4"></h5>
                           <p class="card-text">
                             <div class="row">
-                                <div class="col">
-                                    <!-- icon -->
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <!-- weather status -->
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <!-- min max temperature -->
-                                </div>
+                                <ul class="list-unstyled mt-3 mb-4">
+                                    <li id="temperature.next4" ></li>
+                                    <li id="humidity_next4"></li>
+                                    <br>
+                                    <li id="min-temp.next4"></li>
+                                    <li id="max-temp.next4"></li>
+                                </ul>
                             </div>
                           </p>
                         </div>
@@ -151,22 +147,16 @@
                 <div class="col">
                     <div class="card">
                         <div class="card-body body-custom">
-                          <h5 class="card-title text-white">Fri</h5>
+                          <h5 class="card-title text-white" id="day-5"></h5>
                           <p class="card-text">
                             <div class="row">
-                                <div class="col">
-                                    <!-- icon -->
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <!-- weather status -->
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <!-- min max temperature -->
-                                </div>
+                                <ul class="list-unstyled mt-3 mb-4">
+                                    <li id="temperature.next5" ></li>
+                                    <li id="humidity_next5"></li>
+                                    <br>
+                                    <li id="min-temp.next5"></li>
+                                    <li id="max-temp.next5"></li>
+                                </ul>
                             </div>
                           </p>
                         </div>
@@ -175,56 +165,44 @@
                 <div class="col">
                     <div class="card">
                         <div class="card-body body-custom">
-                          <h5 class="card-title text-white">Sat</h5>
+                          <h5 class="card-title text-white" id="day-6"></h5>
                           <p class="card-text">
                             <div class="row">
-                                <div class="col">
-                                    <!-- icon -->
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <!-- weather status -->
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <!-- min max temperature -->
-                                </div>
+                                <ul class="list-unstyled mt-3 mb-4">
+                                    <li id="temperature.next6" ></li>
+                                    <li id="humidity_next6"></li>
+                                    <br>
+                                    <li id="min-temp.next6"></li>
+                                    <li id="max-temp.next6"></li>
+                                </ul>
                             </div>
                           </p>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <!-- <div class="col">
                     <div class="card">
                         <div class="card-body body-custom">
-                          <h5 class="card-title text-white">Sun</h5>
+                          <h5 class="card-title text-white"></h5>
                           <p class="card-text">
                             <div class="row">
-                                <div class="col">
-                                    <!-- icon -->
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <!-- weather status -->
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <!-- min max temperature -->
-                                </div>
+                                <ul class="list-unstyled mt-3 mb-4">
+                                    <li id="temperature_next7"></li>
+                                    <li id="humidity_next7"></li>
+                                    <li id="min_next7"></li>
+                                    <li id="max_next7"></li>
+                                </ul>
                             </div>
                           </p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <!-- End Card -->
     
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
- </body>
+      </body>
+
+      <script type="text/javascript" src="script.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
